# ocr

./: README.md  aakash.md  aakash_image_extracted.json  aakash_tagged_questions.json  all_questions.md  allen-jan-2024.md  allen-jan-part-1.md  allen_image_extracted.json  jee_2025_ph_1.md  pyproject.toml  split_md.py  tagged_questions.json  test_questions.json
